// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ic-page-header component renders additional functionality should render a stepper: should render a stepper 1`] = `
<ic-page-header heading="Create a coffee">
  <mock:shadow-root>
    <header class="border-bottom">
      <ic-section-container aligned="left">
        <div class="main-content">
          <div class="title-area">
            <div class="header-content">
              <slot name="heading">
                <ic-typography class="heading" variant="h2">
                  <h2>
                    Create a coffee
                  </h2>
                </ic-typography>
              </slot>
              <slot name="heading-adornment"></slot>
            </div>
            <div>
              <slot name="subheading"></slot>
            </div>
          </div>
        </div>
        <div class="navigation-area">
          <slot name="stepper"></slot>
        </div>
      </ic-section-container>
    </header>
  </mock:shadow-root>
  <ic-stepper slot="stepper">
    <ic-step step-title="Warm kettle" step-type="completed"></ic-step>
    <ic-step step-subtitle="Optional" step-title="Warm milk" step-type="completed"></ic-step>
    <ic-step step-title="Pour milk" step-type="current"></ic-step>
  </ic-stepper>
</ic-page-header>
`;

exports[`ic-page-header component renders additional functionality should render actions, input & stepper: should render actions, input & stepper 1`] = `
<ic-page-header heading="Coffee recipes" subheading="This is a simple page header component and this is the text.">
  <mock:shadow-root>
    <header class="border-bottom">
      <ic-section-container aligned="left">
        <div class="main-content">
          <div class="title-area">
            <div class="header-content">
              <slot name="heading">
                <ic-typography class="heading" variant="h2">
                  <h2>
                    Coffee recipes
                  </h2>
                </ic-typography>
              </slot>
              <slot name="heading-adornment"></slot>
            </div>
            <div>
              <slot name="subheading">
                <ic-typography class="subheading" variant="body">
                  This is a simple page header component and this is the text.
                </ic-typography>
              </slot>
            </div>
          </div>
          <div class="action-area">
            <slot name="actions"></slot>
          </div>
          <div class="input-area">
            <slot name="input"></slot>
          </div>
        </div>
        <div class="navigation-area">
          <slot name="stepper"></slot>
        </div>
      </ic-section-container>
    </header>
  </mock:shadow-root>
  <ic-stepper slot="stepper">
    <ic-step step-title="Warm kettle" step-type="completed"></ic-step>
    <ic-step step-subtitle="Optional" step-title="Warm milk" step-type="completed"></ic-step>
    <ic-step step-title="Pour milk" step-type="current"></ic-step>
  </ic-stepper>
  <ic-status-tag label="Beta" slot="heading-adornment"></ic-status-tag>
  <ic-button slot="actions" variant="tertiary">
    Filter coffee
  </ic-button>
  <ic-button slot="actions" variant="primary">
    Create coffee
    <svg fill="none" height="24" slot="icon" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
      <path d="M19 13H13V19H11V13H5V11H11V5H13V11H19V13Z" fill="currentColor"></path>
    </svg>
  </ic-button>
  <ic-text-field hide-label="" placeholder="Enter your input" slot="input"></ic-text-field>
</ic-page-header>
`;

exports[`ic-page-header component renders additional functionality should render actions, input & tabs: should render actions, input & tabs 1`] = `
<ic-page-header heading="Coffee recipes" subheading="This is a simple page header component and this is the text.">
  <mock:shadow-root>
    <header class="border-bottom tabs">
      <ic-section-container aligned="left" fullheight="">
        <div class="main-content">
          <div class="title-area">
            <div class="header-content">
              <slot name="heading">
                <ic-typography class="heading" variant="h2">
                  <h2>
                    Coffee recipes
                  </h2>
                </ic-typography>
              </slot>
              <slot name="heading-adornment"></slot>
            </div>
            <div>
              <slot name="subheading">
                <ic-typography class="subheading" variant="body">
                  This is a simple page header component and this is the text.
                </ic-typography>
              </slot>
            </div>
          </div>
          <div class="action-area">
            <slot name="actions"></slot>
          </div>
          <div class="input-area">
            <slot name="input"></slot>
          </div>
        </div>
        <div class="navigation-area">
          <nav aria-label="navigation-landmark-page-header" class="tabs-slot">
            <slot name="tabs"></slot>
          </nav>
        </div>
      </ic-section-container>
    </header>
  </mock:shadow-root>
  <ic-status-tag label="Beta" slot="heading-adornment"></ic-status-tag>
  <ic-button slot="actions" variant="tertiary">
    Filter coffee
  </ic-button>
  <ic-button slot="actions" variant="primary">
    Create coffee
    <svg fill="none" height="24" slot="icon" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
      <path d="M19 13H13V19H11V13H5V11H11V5H13V11H19V13Z" fill="currentColor"></path>
    </svg>
  </ic-button>
  <ic-navigation-item href="/all-recipes" label="All recipes" selected="" slot="tabs"></ic-navigation-item>
  <ic-navigation-item href="/favourites" label="Favourites" slot="tabs"></ic-navigation-item>
  <ic-text-field hide-label="" placeholder="Enter your input" slot="input"></ic-text-field>
</ic-page-header>
`;

exports[`ic-page-header component renders additional functionality should render actions: should render actions 1`] = `
<ic-page-header heading="Page header" subheading="This is a simple page header component and this is the text.">
  <mock:shadow-root>
    <header class="border-bottom">
      <ic-section-container aligned="left">
        <div class="main-content">
          <div class="title-area">
            <div class="header-content">
              <slot name="heading">
                <ic-typography class="heading" variant="h2">
                  <h2>
                    Page header
                  </h2>
                </ic-typography>
              </slot>
              <slot name="heading-adornment"></slot>
            </div>
            <div>
              <slot name="subheading">
                <ic-typography class="subheading" variant="body">
                  This is a simple page header component and this is the text.
                </ic-typography>
              </slot>
            </div>
          </div>
          <div class="action-area">
            <slot name="actions"></slot>
          </div>
        </div>
      </ic-section-container>
    </header>
  </mock:shadow-root>
  <ic-button slot="actions" variant="tertiary">
    Filter coffee
  </ic-button>
  <ic-button slot="actions" variant="primary">
    Create coffee
    <svg fill="none" height="24" slot="icon" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
      <path d="M19 13H13V19H11V13H5V11H11V5H13V11H19V13Z" fill="currentColor"></path>
    </svg>
  </ic-button>
</ic-page-header>
`;

exports[`ic-page-header component renders additional functionality should render an input field: should render an input field 1`] = `
<ic-page-header heading="Page header" subheading="This is a simple page header component and this is the text.">
  <mock:shadow-root>
    <header class="border-bottom">
      <ic-section-container aligned="left">
        <div class="main-content">
          <div class="title-area">
            <div class="header-content">
              <slot name="heading">
                <ic-typography class="heading" variant="h2">
                  <h2>
                    Page header
                  </h2>
                </ic-typography>
              </slot>
              <slot name="heading-adornment"></slot>
            </div>
            <div>
              <slot name="subheading">
                <ic-typography class="subheading" variant="body">
                  This is a simple page header component and this is the text.
                </ic-typography>
              </slot>
            </div>
          </div>
          <div class="input-area">
            <slot name="input"></slot>
          </div>
        </div>
      </ic-section-container>
    </header>
  </mock:shadow-root>
  <ic-status-tag label="Beta" slot="heading-adornment"></ic-status-tag>
  <ic-text-field hide-label="" placeholder="Enter your input" slot="input"></ic-text-field>
</ic-page-header>
`;

exports[`ic-page-header component renders additional functionality should render tabs: should render tabs 1`] = `
<ic-page-header heading="Coffee recipes" subheading="This is a simple page header component and this is the text.">
  <mock:shadow-root>
    <header class="border-bottom tabs">
      <ic-section-container aligned="left" fullheight="">
        <div class="main-content">
          <div class="title-area">
            <div class="header-content">
              <slot name="heading">
                <ic-typography class="heading" variant="h2">
                  <h2>
                    Coffee recipes
                  </h2>
                </ic-typography>
              </slot>
              <slot name="heading-adornment"></slot>
            </div>
            <div>
              <slot name="subheading">
                <ic-typography class="subheading" variant="body">
                  This is a simple page header component and this is the text.
                </ic-typography>
              </slot>
            </div>
          </div>
        </div>
        <div class="navigation-area">
          <nav aria-label="navigation-landmark-page-header" class="tabs-slot">
            <slot name="tabs"></slot>
          </nav>
        </div>
      </ic-section-container>
    </header>
  </mock:shadow-root>
  <ic-status-tag label="Beta" slot="heading-adornment"></ic-status-tag>
  <ic-navigation-item href="/all-recipes" label="All recipes" selected="" slot="tabs"></ic-navigation-item>
  <ic-navigation-item href="/favourites" label="Favourites" slot="tabs"></ic-navigation-item>
</ic-page-header>
`;

exports[`simple ic-page-header renders should render with a heading & sub-heading: should render with a heading & sub-heading 1`] = `
<ic-page-header heading="Page header" subheading="This is a simple page header component and this is the text.">
  <mock:shadow-root>
    <header class="border-bottom">
      <ic-section-container aligned="left">
        <div class="main-content">
          <div class="title-area">
            <div class="header-content">
              <slot name="heading">
                <ic-typography class="heading" variant="h2">
                  <h2>
                    Page header
                  </h2>
                </ic-typography>
              </slot>
              <slot name="heading-adornment"></slot>
            </div>
            <div>
              <slot name="subheading">
                <ic-typography class="subheading" variant="body">
                  This is a simple page header component and this is the text.
                </ic-typography>
              </slot>
            </div>
          </div>
        </div>
      </ic-section-container>
    </header>
  </mock:shadow-root>
</ic-page-header>
`;
